--- a/package.json
+++ b/package.json
@@ -23,7 +23,25 @@
   },
   "homepage": "https://github.com/XadillaX/nyaacat#readme",
   "dependencies": {
+    "colors": "^1.1.2",
+    "config": "^1.16.0",
     "express": "^4.13.3",
+    "fbbk-json": "0.0.8",
     "toshihiko": "^0.6.0"
+  },
+  "devDependencies": {
+    "del": "^2.0.2",
+    "gulp": "^3.9.0",
+    "gulp-csso": "^1.0.1",
+    "gulp-if": "^2.0.0",
+    "gulp-jade": "^1.1.0",
+    "gulp-less": "^3.0.3",
+    "gulp-load-plugins": "^1.0.0",
+    "gulp-minify-html": "^1.0.4",
+    "gulp-rev": "^6.0.1",
+    "gulp-rev-replace": "^0.4.2",
+    "gulp-size": "^2.0.0",
+    "gulp-uglify": "^1.4.2",
+    "gulp-useref": "^1.3.0"
   }
 }
