--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/XadillaX/nyaacat#readme",
   "dependencies": {
+    "app-module-path": "^1.0.4",
     "colors": "^1.1.2",
     "config": "^1.16.0",
     "express": "^4.13.3",
