--- a/f2e/package.json
+++ b/f2e/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "babyflux",
+  "name": "f2e",
   "version": "1.0.0",
-  "description": "flux脚手架",
+  "description": "搜车参赛babyBluetooth",
   "main": "index.js",
   "keywords": [
     "flux",
