--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "config": "^1.16.0",
     "express": "^4.13.3",
     "fbbk-json": "0.0.8",
+    "sugar": "^1.4.1",
     "toshihiko": "^0.6.0"
   },
   "devDependencies": {
