--- a/f2e/package.json
+++ b/f2e/package.json
@@ -27,13 +27,16 @@
     "style-loader": "^0.12.4",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.2",
-    "webpack-dev-server": "^1.12.1",
-    "react-hot-loader": "^1.3.0"
+    "webpack-dev-server": "^1.12.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "dev": "webpack-dev-server --devtool eval --progress --colors --hot --content-base build",
     "deploy": "NODE_ENV=production webpack -p --config webpack.production.config.js"
+  },
+  "devDependencies": {
+    "socket.io": "^1.3.7",
+    "socket.io-client": "^1.3.7"
   }
 }
