--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
   "dependencies": {
     "app-module-path": "^1.0.4",
     "async": "^1.4.2",
+    "body-parser": "^1.14.1",
     "colors": "^1.1.2",
     "config": "^1.16.0",
     "express": "^4.13.3",
     "fbbk-json": "0.0.8",
     "sugar": "^1.4.1",
+    "supertest": "^1.1.0",
     "toshihiko": "^0.6.0"
   },
   "devDependencies": {
