--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "config": "^1.16.0",
     "express": "^4.13.3",
     "fbbk-json": "0.0.8",
+    "morgan": "^1.6.1",
     "sugar": "^1.4.1",
     "supertest": "^1.1.0",
     "toshihiko": "^0.6.0",
